JSONView 0.3
* Detects and displays JSONP, including display of the callback.
* Doesn't show empty arrays and objects as collapsible, and displays them on one line.

JSONView 0.2
* .json files can be opened in JSONView from the local machine.
* Added Bulgarian, German, Hungarian, and (partial) Turkish translations. Thanks to 
	Стоян Димитров, Archaeopteryx, Team erweiterungen.de, MIKES KASZMÁN István and Ersen Yolda from BabelZilla.org.
* Compatible with FF 3.5.*

JSONView 0.1

* String values which contain only a URL are displayed as a clickable link. Props to stig.murberg for the patch.
* Added Catalan, Spanish, Japanese, Portugese (Brazil), Russian, and Simplified Chinese translations. Thanks to 
	Fani Kozolchyk, and Xavi Ivars - Softcatalà, hoolooday, drry, Marcelo Ghelman (ghelman.net), Пирятинский Виталий, 
	and urko from BabelZilla.org.

JSONView 0.1b3:

* Compatible with FF 3.1 Beta 3
* Fixed a bug where documents >8KB wouldn't be parsed.
* Added Czech, French, and Dutch translations. Thanks to funTomas, Goofy, and markh at babelzilla.org.
* Removed dependency on jQuery - extension is smaller, faster, no more warnings in strict mode.

JSONView 0.1b2:

* Compatible with FF 3.1 Beta 2

JSONView 0.1b1:

* First beta release